--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -39,6 +39,7 @@ input {
 .btn-red {
     background: var(--bonuz-red);
     border-radius: 4px;
+    border: none;
     color: white;
     font-weight: bold;
 }
