--- a/src/components/views/Employees/styles.css
+++ b/src/components/views/Employees/styles.css
@@ -1,5 +1,12 @@
 .employees {
     padding: 80px 0;
+    position: relative;
+}
+.employees .marks{
+    position: absolute;
+    top: 55px;
+    left: -30px;
+    z-index: -1;
 }
 .employees .react-multi-carousel-list  {
     height: 500px;
