--- a/src/assets/styles/responsive.css
+++ b/src/assets/styles/responsive.css
@@ -9,6 +9,21 @@
         max-width: 300px;
     }
 
+    .welcome {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .welcome img {
+        max-width: 300px;
+    }
+    .welcome .cont-1 {
+        margin: 0 18px;
+    }
+
     footer {
         padding: 26px 10px;
     }
